# hafeZ

./: .gitignore  AUTHORS.md  HISTORY.md  README.md  environment.yml  hafeZ.py  justfile  pyproject.toml  setup.py  stdin.hhr
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yaml
docs/: citation.md  index.md  install.md  output.md  run.md
hZ/: get_db.py  get_output.py  mapping.py  mapping_calcs.py  misc_functions.py  process_genome.py  process_rois.py
src/hafeZ/: __init__.py
src/hafeZ/utils/: CITATION  db.py  exit.py  external_tools.py  extra_process_roi.py  get_db.py  haf_class.py  mapping.py  mapping_calcs.py  orfs.py  post_processing.py  premap.py  process_rois.py  util.py  validation.py
tests/: test_overall.py
tests/test_data/: generate_notes.sh
tests/test_data/long/: Sa2_SA222.fasta
tests/test_data/short/: C222.fasta  C222_coverage.txt  Sa2_SA222.fasta  generate_notes.sh
