# https://github.com/python-poetry/poetry/issues/1538
# cant use poetry

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hafeZ"
version = "2.0.0" # change VERSION too
description = "A tool for identifying active prophage elements through read mapping"
authors = [ {name = "Christopher J. R. Turkington", email =  "chrisjrt1@gmail.com"}, 
            {name = "George Bouras", email = "george.bouras@adelaide.edu.au" }]
license = {text = "GPL-3"} 
readme = "README.md"
keywords = ["phage", "bioinformatics"]

dependencies = [
    "click >=8.0.0",
    "loguru >=0.5.3",
    "pyyaml >=6.0",
    "pandas >=1.4.2",
    "numpy >=1.20.1",
    "pysam >=0.16.0.1",
    "biopython >=1.76",
    "pyrodigal >=3.0.0",
    "matplotlib >=3.3.4",
    "scipy >=1.6.2",
    "seaborn >=0.11.1",
    "pyhmmer >=0.10.0",
    "alive-progress >=3.0.1",
    "requests >=2.25.1",
    "pytest >=6.2.5",
    "pytest-cov >=3.0.0"
]

[project.scripts]
hafeZ = 'hafeZ:main'